2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synhronize with share.
	* build-aux/doxygen.m4: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: Synchronize.
	* build-aux/roboptim-core.m4: New.
	* configure.ac: Update to use new rules.
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/sf-upload.sh.in: Synchronize.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix compilation warning.
	* include/roboptim/core/generic-solver.hh:
	Return a dummy value in impossible case.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo in method name.
	* include/roboptim/core/generic-solver.hh: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update quickstart.
	* src/doc.hh: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update quickstart.
	* src/doc.hh: Update to new interface.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Document test.
	* tests/n-times-derivable-function.cc: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Document tests.
	* tests/problem-cc.cc,
	* tests/result.cc,
	* tests/visualization-gnuplot-function.cc,
	* tests/visualization-gnuplot-simple.cc:
	Document.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Document unit test.
	* tests/finite-difference-gradient.cc: Document,
	fix naming, remove unneeded header inclusion.
	* tests/finite-difference-gradient.stdout: Regenerate.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Document unit tests.
	* tests/plugin.cc,
	* tests/simple.cc: Document.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Wrap Boost.Variant usage.
	* include/roboptim/core/generic-solver.hh: Add
	getMinimum and mimimumType methods to wrap Boost.Variant.
	* tests/plugin.cc,
	* tests/simple.cc: Update test cases.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo.
	* include/roboptim/core/linear-function.hh: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
